<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="arp.dolphinsoft.lidora.shelemshomar.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/edit_first_group_name"
        android:hint="@string/first_group_name"/>

    <LinearLayout
        android:layout_marginTop="@dimen/extra_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/edit_second_group_name"
            android:layout_weight="1"
            android:hint="@string/second_group_name" />

        <TextView
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter group names"
            android:textColor="@color/RED"
            android:id="@+id/txt_validation"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_game_type"
            android:layout_marginRight="@dimen/large_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_game_type"/>

    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_margin"
        android:text="@string/txt_double_nagative"
        android:id="@+id/check_double_negative" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_margin"
        android:text="@string/btn_start_game_txt"
        android:id="@+id/btn_start_game"/>

</LinearLayout>
