<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_start_round"
            android:id="@+id/btn_start_round"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_end_round"
            android:id="@+id/btn_end_round"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_weight="0.5"
            android:id="@+id/txv_game_date"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_weight="0.5"
            android:id="@+id/txv_game_time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:background="@color/GRAY"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:id="@+id/txt_header_first_group_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:id="@+id/txt_header_first_group_point"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_weight="0.6"
        android:gravity="center"
        android:id="@+id/txt_header_vs"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:id="@+id/txt_header_second_group_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:id="@+id/txt_header_second_group_point"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

</LinearLayout>

<ListView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/list_view"
android:layout_alignParentLeft="true"
android:layout_alignParentStart="true"
android:layout_above="@+id/linearLayout"
android:layout_below="@+id/linearLayout2" />

    </RelativeLayout>